@@ -8,7 +8,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * Hotel Class.
@@ -20,7 +19,7 @@ public class Hotel implements Iterable<HotelRoom> {
   private final Map<String, HotelRoom> rooms = new LinkedHashMap<>();
 
   /**
-   * The hotel's collection of Persons
+   * The hotel's collection of Persons.
    */
   private final Map<String, Person> persons = new LinkedHashMap<>(); 
 
@@ -90,7 +89,7 @@ public class Hotel implements Iterable<HotelRoom> {
     /*
     if (persons.contains(person)) {
       System.out.println(
-        "[Warning]: Tried to add a person that was already added.");
+          "[Warning]: Tried to add a person that was already added.");
       return false;
     } */
     return persons.put(person.getUsername(), person);
@@ -115,7 +114,7 @@ public class Hotel implements Iterable<HotelRoom> {
    */
   public final Collection<HotelRoom> getRooms(
       final Predicate<HotelRoom> predicate) {
-    return getRooms().stream().filter(predicate).collect(Collectors.toList());
+    return getRooms().stream().filter(predicate).toList();
   }
 
   public final Collection<HotelRoom> getRooms() {
@@ -145,7 +144,8 @@ public class Hotel implements Iterable<HotelRoom> {
    * <p>
    * If everything is valid, the method creates a new Reservation object with
    * a (pseudorandom) id, the room with the given {@code hotelRoomNumber} and start/endDate.
-   * It then adds the reservation in the hotelroom with {@code hotelRoomNumber} collection of reservations,
+   * It then adds the reservation in the hotelroom
+   * with {@code hotelRoomNumber} collection of reservations,
    * and then it adds the reservation in this Person objects reservation collection.
    * Finally it subtracs the price of the booking.
    * </p>
@@ -183,7 +183,8 @@ public class Hotel implements Iterable<HotelRoom> {
     }
     Collection<HotelRoom> roomMatches = getRooms((r) -> r.getNumber() == hotelRoomNumber);
     if (roomMatches.size() == 0) {
-      throw new IllegalArgumentException("The specified room number is not the number of a room in the hotel.");
+      throw new IllegalArgumentException(
+        "The specified room number is not the number of a room in the hotel.");
     }
 
     HotelRoom hotelRoom = roomMatches.iterator().next();
